svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver2 
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: httpserver2
