httpserver2-ssl-istio-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver2
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
      labels:
        app: httpserver2
    spec:
      containers:
        - name: httpserver2
          imagePullPolicy: Always
          image: docker.io/kingkonglittle/httpserver2:v1.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: httpserver2
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: httpserver2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpsserver2
spec:
  gateways:
    - httpsserver2
  hosts:
    - httpsserver2.local.com
  http:
    - match:
        - port: 443
      route:
        - destination:
            host: httpsserver2.securesvc.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpsserver2
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - httpsserver2.local.com
      port:
        name: https-default
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: local-credential
