ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-80
spec:
  ingressClassName: nginx
  rules:
    - host: httpserver2.local.com 
      http:
        paths:
          - backend:
              service:
                name: httpserver2 
                port:
                  number: 80
            path: /
            pathType: Prefix
